--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
-title : Blog Title
+title : Probability Word
 tagline: Blog Tagline
 author :
-  name : Firstname Lastname
+  name : itsuper7
   email : blah@email.test
   github : username
   twitter : username
