--- a/data.yml
+++ b/data.yml
@@ -4,7 +4,7 @@ author :
   name : itsuper7
   email : blah@email.test
   github : itsuper7
-  twitter : username
+  twitter : 
   feedburner : feedname
 
 navigation :
